# Multigoal-Orchard-Drone-Planning-Library

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Lengths.ipynb  dependencies.repos  flake.nix  package.xml  readme.md  replace-ompl.nix  shell.nix  vcpkg.json
.github/workflows/: cmake.yml
analysis/: Apple Difficulty Distribution.ipynb  Clustering Plots.ipynb  Cutting Convex Hull vs Minimum Enclosing Sphere.md  Dynamic Comparison.ipynb  Dynamic Goalset Analysis.ipynb  Dynamic Vs Static.md  Full Experiment.ipynb  Goal Sample Success Rate.ipynb  Greatcircle-Goal-To-Goal Correlation.md  ICRA 2024 - Triangular Plots.ipynb  ICRA2024 Plots.ipynb  Length Prediction.ipynb  Lengths.ipynb  New Static.ipynb  Outside-scan comparisons.ipynb  Path Length vs Sphere padding size.ipynb  Path Length vs Sphere vertical offset.ipynb  Performance Analysis.ipynb  RAL PRM vs Sphere vs Convex.ipynb  Shell Comparison RAL.ipynb  Shellpath Shell Choice.ipynb  Static Vs Dynamic.md  TSP Noise Effect.ipynb  TSP Timing and experiment.md  TSP over PRM.ipynb  Walkthrough Presentation Goal Sampling.ipynb  analysis_util.py  approach_planning_comparison.py  full_experiment.json  goal_sample_success_rate.py  loach_benchmark_results.py  load_benchmark_results.py  parse_runs.py  prm_multigoal_experiment.json  probing_motions.py  sampling_difficulty.py  shellpath.json  shellpath_chull_vs_sphere.json  shellpath_offsets.json  shellpath_paddings.json  (+5 more)
analysis/data/: dynamic_log.json
experiments/: approach_planning.cpp  at_benchmark.cpp  bnb_comparison.cpp  clustering_comparison.cpp  euclidean_tsp.cpp  full_experiment.cpp  greatcircle_correlation.cpp  knn.cpp  preorder_experiment.cpp  prm_multigoal_experiment.cpp  prmstar_keep_or_clear.cpp  probe_retreat_move.cpp  probe_retreat_move_rosvisualize.cpp  probe_retreat_move_statistics.cpp  ptp_comparison.cpp  ptp_correlation.cpp  robo_tsp_experiment.cpp
launch/: benchmark.launch  robot_description.launch  robot_description.py
nix/: moveit_core.nix  moveit_package.nix  moveit_planners_ompl.nix  moveit_ros_occupancy_map_monitor.nix  moveit_ros_planning.nix  moveit_ros_planning_interface.nix  moveit_visual_tools.nix  robowflex.nix  robowflex_library.nix  robowflex_ompl.nix
rust_version/: Cargo.toml
rust_version/src/: main.rs  robot.rs  shell_approach_static.rs
rviz/: robowflex.rviz  ros2.rviz  wall_test.rviz
src/: AnytimeOptimalInsertion.cpp  AnytimeOptimalInsertion.h  AppleDiscoveryModel.cpp  AppleDiscoveryModel.h  AppleTreePlanningScene.cpp  AppleTreePlanningScene.h  ApproximateConvexDecompositions.cpp  ApproximateConvexDecompositions.h  BetweenMoveItStatesInformedSampler.cpp  BetweenMoveItStatesInformedSampler.h  BruteForceDedupStreamingAlphashape.cpp  BruteForceDedupStreamingAlphashape.h  BulletContinuousMotionValidator.cpp  BulletContinuousMotionValidator.h  CanSeeApple.h  ClearanceDecreaseMinimizationObjective.cpp  ClearanceDecreaseMinimizationObjective.h  ClearanceDecreaseMinimzationObjective.cpp  ClearanceDecreaseMinimzationObjective.h  ConvexHullShell.cpp  ConvexHullShell.h  CurrentPathState.cpp  CurrentPathState.h  DirectApproachVariantSampler.cpp  DirectApproachVariantSampler.h  DirectPointCloudCollisionDetection.cpp  DirectPointCloudCollisionDetection.h  DistanceHeuristics.cpp  DistanceHeuristics.h  DronePathLengthObjective.cpp  DronePathLengthObjective.h  DroneStateConstraintSampler.cpp  DroneStateConstraintSampler.h  DroneStateSampler.cpp  DroneStateSampler.h  DynamicGoalVisitationEvaluation.cpp  DynamicGoalVisitationEvaluation.h  DynamicGoalsetPlanningProblem.cpp  DynamicGoalsetPlanningProblem.h  DynamicMultiGoalPlanner.h  (+175 more)
src/abstract/: StateVectorPath.h  approach_paths.h  dynamic_shell_approach.h  goal_to_goal_via_shell.h  path_traits.h  shell_space.h  static_shell_approach.h  tsp_on_shell.h
src/benchmarks/: approach_planning.cpp  approach_planning_viz.cpp  arm_axis_motions.cpp  benchmark_function_macros.h  from_end_effector_and_vector.cpp  fruit_scan_fullpath.cpp  fruit_scan_points.cpp  (+17 more)
src_old/: AnytimeOptimalInsertion.h  AppleTreePlanningScene.h  BulletContinuousMotionValidator.cpp  CanSeeApple.cpp  DistanceHeuristics.cpp  DronePathLengthObjective.h  DroneStateConstraintSampler.h  DroneStateSampler.cpp  DynamicGoalVisitationEvaluation.cpp  DynamicGoalVisitationEvaluation.h  DynamicGoalsetPlanningProblem.cpp  DynamicGoalsetPlanningProblem.h  DynamicMultiGoalPlanner.cpp  EndEffectorOnShellGoal.cpp  ExperimentVisualTools.h  GreatCircleMetric.cpp  GreatCircleMetric.h  IncrementalTSPMethods.cpp  InformedManipulatorDroneSampler.cpp  InformedRobotStateSampler.cpp  InformedRobotStateSampler.h  Instrumented.h  LeavesCollisionChecker.cpp  MyCollisionEnv.cpp  ORToolsTSPMethods.cpp  OnlineOrderOptimization.cpp  OrbitPath.cpp  PathLengthPredictor.h  PeriodicFullReorderingTSPMethods.cpp  RobotCameraTracker.cpp  RobotCameraTracker.h  RobotPath.cpp  RobotPath.h  RunPlannerThreaded.h  ScannablePointsIndex.cpp  ScannablePointsIndex.h  SingleGoalPlannerMethods.cpp  StreamingAlphaShape.cpp  StreamingAlphaShape.h  StreamingConvexHull.cpp  (+18 more)
test/: AABBGrid_test.cpp  BulletContinuousMotionValidatorTest.cpp  CGALMeshShell_test.cpp  CuttingPlaneConvexHullShell_test.cpp  CylinderShell_test.cpp  HorizontalOrientedBoundingBox_test.cpp  JsonTests.cpp  MinimumClearanceOctree_test.cpp  MoveItPathLengthObjectiveTest.cpp  MoveitPathLengthObjectiveTest.cpp  MyCollisionEnvTest.cpp  OnlineOrderOptimization_test.cpp  PointOnMeshLookup_test.cpp  SphereShell_test.cpp  StreamingConvecHull_test.cpp  StreamingConvexHull_test.cpp  SurfletVolume_test.cpp  TimedConvergenceTerminationCondition_test.cpp  VisualiserTest.cpp  approachplanning_accuracy.cpp  clustering_tests.cpp  collision_checking_test.cpp  enhanced_hac_test.cpp  informed_sampler_test.cpp  math_test.cpp  mesh_loading.cpp  probe_retreat_move_tests.cpp  ptp_tests.cpp  pure_stuff.cpp  quaternion_informed_sampler_test.cpp  run_detection_test.cpp  test.cpp  test_constraint_sampler.cpp  test_utils.cpp  test_utils.h  tests.cpp  tsp_tests.cpp  voxel_visibility_test.cpp
tests/: test_constraint_sampler.cpp
(+811 files in other folders)
